.provarCaches/00D410000011HE0EAM/objects/rstk__poship__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_poship</customHelpPage>
    <description>poship__c</description>
    <fields>
        <fullName>rstk__customShipmentSequence__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Shipment Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poship_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__poship_shipmentid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poship_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__poship_shipmentid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poship_shipmentid__c + &apos; &apos; +  rstk__poship_routetype__r.rstk__portetype_typeid__c + &apos; &apos; +  rstk__poship_poroute__r.rstk__poroute_routeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_actduedate__c</fullName>
        <inlineHelpText>Manual entry or automated from api.  Date shipment received at final routing destination.</inlineHelpText>
        <label>Actual Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_actlocwhdate__c</fullName>
        <inlineHelpText>Date shipment arrived at local warehouse.  Manual entry.</inlineHelpText>
        <label>Actual Local Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_arrivalDateRollUp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Actual Arrival Date RollUp</label>
        <summaryForeignKey>rstk__poshipstep__c.rstk__poshipstep_poship__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__poship_bookingno__c</fullName>
        <inlineHelpText>Shipper booking number.  Manual entry, not required.</inlineHelpText>
        <label>Booking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Valid carrier from carrier master file.  Manually entered, not required.</inlineHelpText>
        <label>SSL/Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Inbound Shipment Master SupReq</relationshipLabel>
        <relationshipName>poships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_class5122__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class 5.1 or Class 2.22</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_comments2__c</fullName>
        <label>Loading Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
                <value>
                    <fullName>POSHIP_LS1</fullName>
                </value>
                <value>
                    <fullName>POSHIP_LS2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poship_comments__c</fullName>
        <inlineHelpText>50 character free-form field.  User defined comments.</inlineHelpText>
        <label>Loading Site</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_currduedate__c</fullName>
        <inlineHelpText>Current delivery date at final destination based on routing.  If Shipment Routing Locked in is checked, this field will reflect the current due date based on the routing.  Not required.</inlineHelpText>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_customscleared__c</fullName>
        <inlineHelpText>Date shipment cleared customs.  Manual entry, not required.</inlineHelpText>
        <label>Customs Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_datecalcreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Recalculation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_destaddress__c</fullName>
        <inlineHelpText>Outbound shipments only.  Address outbound shipment will be delivered to.  Only available if Outbound Shipment checkbox is checked.</inlineHelpText>
        <label>Destination Address (Outbound)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poship_destination__c</fullName>
        <inlineHelpText>Default from inventory item master.  May be either WMS or Consolidation Center.  This value may be overwritten.</inlineHelpText>
        <label>Inbound Shipment Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consolidation Center</fullName>
                </value>
                <value>
                    <fullName>WMS CS</fullName>
                </value>
                <value>
                    <fullName>WMS BB</fullName>
                </value>
                <value>
                    <fullName>Dalian Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poship_dgbookclosedate__c</fullName>
        <inlineHelpText>Date DG Booking must be completed.  Not required.</inlineHelpText>
        <label>DG Booking Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_docclosedate__c</fullName>
        <inlineHelpText>Date documentation for this shipment must be received from shipper.  Not required.</inlineHelpText>
        <label>Documentation Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_earlydate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Earliest Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_frtplanner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From table, the freight plannner responsible for this shipment.</inlineHelpText>
        <label>Freight Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>poships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_haulage__c</fullName>
        <label>Inland Haulage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Port to Port</fullName>
                </value>
                <value>
                    <fullName>Door to Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poship_haulier__c</fullName>
        <label>Haulier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zenith</fullName>
                </value>
                <value>
                    <fullName>Gist</fullName>
                </value>
                <value>
                    <fullName>Other (Add Comment)</fullName>
                </value>
                <value>
                    <fullName>OEM Arranged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poship_hauliercomment__c</fullName>
        <label>Comment</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_havebookcon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Booking Confirmation Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_loadingsite__c</fullName>
        <label>Comments</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_master__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used when multiple shipments are scheduled for the same routing.  If checked, this record becomes a Master with no directly associated containers.  Parent shipments/containers are chosen from dropdown.</inlineHelpText>
        <label>Master Shipper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_masterpoship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Display field.  If this shipment is part of a Master Shipment, the display indicates the Master Shipment number.  Any updates to the Master routing are automatically used to update it&apos;s parents.</inlineHelpText>
        <label>Parent Shipment</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipName>poships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_origduedate__c</fullName>
        <inlineHelpText>Original date shipment to be received based on routing.  If Shipment Route Locked In is checked, this will be the current Original Due Date from the routing.</inlineHelpText>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_outbound__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this shipment will be returning items to suppliers instead of delivering items from suppliers.  Checking the box makes additional fields related to outbound shipments operational.</inlineHelpText>
        <label>Outbound Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_poconctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If routed through a consolidation center prior to final shipment to TMS, this field displays the consolidation center where the current routing originated.</inlineHelpText>
        <label>Originating Consolidation Center</label>
        <referenceTo>rstk__poconctr__c</referenceTo>
        <relationshipName>Inbound_Shipment_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_poroute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The route selected for this shipment from the Route Master file.</inlineHelpText>
        <label>Source Shipment Route</label>
        <referenceTo>rstk__poroute__c</referenceTo>
        <relationshipName>poroutepoships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_portcutdate__c</fullName>
        <inlineHelpText>Manual entry.  Date container must be available to meet the intended ocean vessel.</inlineHelpText>
        <label>Port Cut Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_portrouting2__c</fullName>
        <label>Port Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>POSHIP_PR1</fullName>
                </value>
                <value>
                    <fullName>POSHIP_PR2</fullName>
                </value>
                <value>
                    <fullName>pocontainer_pr1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poship_portrouting__c</fullName>
        <inlineHelpText>Port Routing information.  Manual entry, free-form, not required.</inlineHelpText>
        <label>Port Routing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poship_poshipcont__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Container</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>Inbound Shipment Master SupReq</relationshipLabel>
        <relationshipName>poships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_poupdatedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>POs Updated-To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_priority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Currently for user information only.</inlineHelpText>
        <label>Priority Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_readyforpu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Ready for Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Defaults to checked once received date is entered in final routing step.</inlineHelpText>
        <label>Shipment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_routelock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, changes to the routing dates that would affect the requisition due dates will adjust the requisition dates.  If unchecked, routing changes will not affect requisition due dates.</inlineHelpText>
        <label>Shipment Route Locked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poship_routetype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid Route Type from Route Type master table.</inlineHelpText>
        <label>Route Type</label>
        <referenceTo>rstk__portetype__c</referenceTo>
        <relationshipName>portetypepoships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poship_serialno__c</fullName>
        <label>Container Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_shipmentid__c</fullName>
        <inlineHelpText>Unique identifier for this shipment.  Automatically added by the system but can be over-written.</inlineHelpText>
        <label>TMM Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_siclosedate__c</fullName>
        <inlineHelpText>Date by which Shipping Instructions must be received.  Not required.</inlineHelpText>
        <label>Shipping Instruction Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poship_step_sequence__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Step Sequence</label>
        <summarizedField>rstk__poshipstep__c.rstk__poshipstep_seq__c</summarizedField>
        <summaryForeignKey>rstk__poshipstep__c.rstk__poshipstep_poship__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__poship_termaddress__c</fullName>
        <inlineHelpText>Address of terminal for this shipment.  Manual entry, not required.</inlineHelpText>
        <label>Terminal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poship_vessels__c</fullName>
        <inlineHelpText>Name of vessel or vessels being used for this shipment.  Manual entry, not required.</inlineHelpText>
        <label>Vessel Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poship_wmsdirectrqst__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  If checked, this inbound shipment had originally be routed to a consolidation center, but WMS is requesting that it be shipped to them directly.</inlineHelpText>
        <label>Direct Ship Requested by WMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inbound Shipment Master SupReq</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Inbound_Shipment_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__poship_poconctr__c</columns>
        <columns>rstk__poship_received__c</columns>
        <columns>rstk__poship_div__c</columns>
        <columns>rstk__poship_outbound__c</columns>
        <columns>rstk__poship_shipmentid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poship_earlydate__c</columns>
        <columns>rstk__poship_routetype__c</columns>
        <columns>rstk__poship_poroute__c</columns>
        <columns>rstk__poship_comments__c</columns>
        <columns>rstk__poship_datecalcreqd__c</columns>
        <columns>rstk__poship_destaddress__c</columns>
        <columns>rstk__poship_routelock__c</columns>
        <columns>rstk__customShipmentSequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inbound Shipment Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Inbound_Shipment_Master_SR</fullName>
        <columns>NAME</columns>
        <columns>rstk__poship_poconctr__c</columns>
        <columns>rstk__poship_div__c</columns>
        <columns>rstk__poship_outbound__c</columns>
        <columns>rstk__poship_shipmentid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poship_earlydate__c</columns>
        <columns>rstk__poship_routetype__c</columns>
        <columns>rstk__poship_poroute__c</columns>
        <columns>rstk__poship_comments__c</columns>
        <columns>rstk__poship_datecalcreqd__c</columns>
        <columns>rstk__poship_destaddress__c</columns>
        <columns>rstk__poship_routelock__c</columns>
        <columns>rstk__customShipmentSequence__c</columns>
        <columns>rstk__poship_master__c</columns>
        <filterScope>Mine</filterScope>
        <label>Inbound Shipment Master SR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__bccInbound_Shipment_Master</fullName>
        <columns>rstk__customShipmentSequence__c</columns>
        <columns>NAME</columns>
        <columns>rstk__poship_poconctr__c</columns>
        <columns>rstk__poship_received__c</columns>
        <columns>rstk__poship_div__c</columns>
        <columns>rstk__poship_outbound__c</columns>
        <columns>rstk__poship_comments__c</columns>
        <columns>rstk__poship_hauliercomment__c</columns>
        <columns>rstk__poship_loadingsite__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poship_class5122__c</columns>
        <columns>rstk__poship_routetype__c</columns>
        <columns>rstk__poship_origduedate__c</columns>
        <columns>rstk__poship_poroute__c</columns>
        <columns>rstk__poship_routelock__c</columns>
        <filterScope>Everything</filterScope>
        <label>bccInbound Shipment Master</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Shipment Master SupReq</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_and_shipment_ID_cannot_change</fullName>
        <active>true</active>
        <description>Division and shipment ID cannot be changed.</description>
        <errorConditionFormula>OR( 
ISCHANGED(rstk__poship_div__c),
ISCHANGED(rstk__poship_shipmentid__c)
)</errorConditionFormula>
        <errorMessage>Division and shipment ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>